# modeling-app

./: ..env.development.local.swp  .codespellrc  .env.development  .env.development.dev  .env.production  .envrc  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .npmrc  .nvmrc  .prettierignore  .tool-versions  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GLOSSARY.md  INSTALL.md  Info.plist  LICENSE  MIGRATION_PLAN.md  Makefile  PRINCIPLES.md  README.md  SPECIFICATION.txt  _typos.toml  add-osx-cert.sh  babel.config.js  bad.txt  biome.json  disabledTests.json  electron-builder.yml  eslint.config.mjs  example.bing  exp  face-api-pr3-e2e-failure-triage.md  flake.nix  (+59 more)
rust/: .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  foo  justfile  rust-toolchain.toml  rustfmt.toml  tofix.txt
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/dotnet/: Kcl.g.cs
rust/ezpz/: Cargo.toml
rust/ezpz/benches/: equations.rs
rust/ezpz/src/: constraints.rs  datatypes.rs  equations.rs  id.rs  lib.rs  solver.rs
rust/kcl-api/: Cargo.toml
rust/kcl-api/bindings/: ApiArc.ts  ApiCircle.ts  ApiConstraint.ts  ApiFile.ts  ApiFileId.ts  ApiLine.ts  ApiObjectId.ts  ApiPoint.ts  ApiPoint2d.ts  ApiProjectId.ts  ApiSegment.ts  ApiSettings.ts  ApiSketch.ts  ApiStartOrEnd.ts  ApiVersion.ts  ArcCtor.ts  CircleCtor.ts  Coincident.ts  Error.ts  Expr.ts  Freedom.ts  LineCtor.ts  MidPointLineCtor.ts  Number.ts  Object.ts  ObjectKind.ts  Parallel.ts  Plane.ts  SceneGraph.ts  SceneGraphDelta.ts  SegmentCtor.ts  SketchArgs.ts  SourceDelta.ts  SourceRef.ts  TangentArcCtor.ts  ThreePointArcCtor.ts  ThreePointCircleCtor.ts
rust/kcl-api/src/: artifact_id.rs  ast.rs  cad_op.rs  front.rs  kcl_value_view.rs  lib.rs  numeric_type.rs  sketch.rs  units.rs
rust/kcl-book-tester/: Cargo.toml  bacon.toml  run
rust/kcl-book-tester/src/: main.rs
rust/kcl-bumper/: Cargo.toml
rust/kcl-bumper/src/: main.rs
rust/kcl-csharp/: Cargo.toml  build.rs  run_c_smoke.sh
rust/kcl-csharp/src/: lib.rs
rust/kcl-csharp/tests/: c_smoke.c
rust/kcl-derive-docs/: Cargo.toml
rust/kcl-derive-docs/src/: example_tests.rs  lib.rs  tests.rs  unbox.rs
rust/kcl-derive-docs/tests/: args_with_lifetime.gen  args_with_refs.gen  array.gen  box.gen  doc_comment_with_code.gen  lineTo.gen  min.gen  option.gen  option_input_format.gen  return_vec_box_sketch.gen  return_vec_sketch.gen  show.gen  test_args_with_exec_state.gen
rust/kcl-directory-test-macro/: Cargo.toml
rust/kcl-directory-test-macro/src/: lib.rs
rust/kcl-error/: Cargo.toml
rust/kcl-error/bindings/: CompilationError.ts  Severity.ts  SourceRange.ts  Suggestion.ts  Tag.ts
rust/kcl-error/src/: error.rs  lib.rs  source_range.rs
rust/kcl-language-server/: .gitignore  .vscodeignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.config.js
rust/kcl-language-server-release/: Cargo.toml
rust/kcl-language-server-release/src/: build.rs  main.rs
rust/kcl-language-server/sample-code/: gear.kcl  parse_error.kcl
rust/kcl-language-server/src/: main.rs
rust/kcl-lib/: Cargo.toml  README.md  build.rs  clippy.toml  common.kcl  kcl_execution_modes.md
rust/kcl-lib/benches/: ast_benchmark.rs  benchmark_kcl_samples.rs  compiler_benchmark_criterion.rs  digest_benchmark.rs  executor_benchmark_criterion.rs  executor_kcl_samples.rs  frontend.rs  lsp_semantic_tokens_benchmark_criterion.rs  memory_benchmark_criterion.rs  memory_profile.rs
rust/kcl-lib/expected-bindings/: README.md
rust/kcl-lib/fuzz/: Cargo.toml
rust/kcl-lib/src/: collections.rs  errors.rs  export_bindings.rs  fmt.rs  frontend.rs  geo_dbg.rs  id.rs  lib.rs  log.rs  main.rs  modules.rs  override_parameters.rs  refactor_edge_stdlib.rs  runtime_flags.rs  simulation_tests.rs  source_range.rs  test_server.rs  test_util.rs  unit_conversion.rs  unparser.rs  util.rs  variant_name.rs
rust/kcl-lib/std/: appearance.kcl  array.kcl  cutStrategy.kcl  gdt.kcl  gear.kcl  hole.kcl  math.kcl  mbd.kcl  planes.kcl  prelude.kcl  runtime.kcl  sketch.kcl  sketch2.kcl  solid.kcl  solver.kcl  string.kcl  sweep.kcl  transform.kcl  turns.kcl  types.kcl  units.kcl  vector.kcl
rust/kcl-lib/tests/: face_api_fillet_test.kcl  simtest.tmpl
rust/kcl-python-bindings/: Cargo.toml  README.md  justfile  kcl.pyi  pyproject.toml
rust/kcl-python-bindings/files/: box_with_linter_errors.kcl  cube.step  lego.kcl  warning.kcl
rust/kcl-python-bindings/src/: bridge.rs  lib.rs
rust/kcl-python-bindings/stubs/: kcl.pyi
rust/kcl-python-bindings/tests/: tests.py
rust/kcl-syntax/: Cargo.toml  README.md
rust/kcl-syntax/src/: lexer.rs  lib.rs  syntax_kind.rs
rust/kcl-syntax/tests/: lexer.rs
rust/kcl-test-server/: Cargo.toml
rust/kcl-test-server/src/: lib.rs
rust/kcl-to-core/: Cargo.toml
rust/kcl-to-core/src/: conn_mock_core.rs  lib.rs  tool.rs
rust/kcl-to-core/tests/: kcl_to_core_test.rs
rust/kcl-wasm-lib/: Cargo.toml  README.md
rust/kcl-wasm-lib/src/: api.rs  context.rs  lib.rs  lsp.rs  tests.rs  trim.rs  wasm.rs
rust/manual/blns-lexer-tests/: Cargo.toml  README.md  justfile
src-tauri/: Cargo.toml  Info.plist  endpoint.json  tauri.app-store.conf.json  tauri.conf.json  tauri.file-associations.conf.json  tauri.macos.conf.json  tauri.noupdater.json  tauri.release.conf.json  tauri.release.conf.json.disabled  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/e2e/specs/: example.e2e.js
src-tauri/entitlements/: Zoo Modeling App.entitlements  general.entitlements
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src/wasm-lib/: Cargo.toml  justfile  output.txt  prelude.kcl  rust-toolchain.toml
src/wasm-lib/.config/: cargo.toml  nextest.toml
src/wasm-lib/derive-docs/: Cargo.toml
src/wasm-lib/execution-plan/: Cargo.toml
src/wasm-lib/fuzz/: Cargo.toml
src/wasm-lib/grackle/: Cargo.toml
src/wasm-lib/kcl/: Cargo.toml  README.md  clippy.toml  (+1 more)
src/wasm-lib/kcl-compile-macro/: Cargo.toml
src/wasm-lib/kcl-macros/: Cargo.toml
src/wasm-lib/kcl-test-server/: Cargo.toml
src/wasm-lib/kcl-to-core/: Cargo.toml
(+11331 files in other folders)
