[workspace]
resolver = "2"
members = [
  "kcl-bumper",
  "kcl-derive-docs",
  "kcl-directory-test-macro",
  "kcl-error",
  "kcl-language-server",
  "kcl-language-server-release",
  "kcl-lib",
  "kcl-python-bindings",
  "kcl-test-server",
  "kcl-to-core",
  "kcl-wasm-lib",
]

[workspace.dependencies]
ahash = "0.8.11"
anyhow = { version = "1" }
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
console_error_panic_hook = "0.1.7"
dashmap = { version = "6.1.0" }
http = "1"
indexmap = "2.12.1"
kcl-ezpz = "0.2.9"
kittycad = { version = "0.4.2", default-features = false, features = [
  "js",
  "requests",
] }
kittycad-modeling-cmds = { version = "0.2.148", features = [
  "ts-rs",
  "websocket",
] }
lazy_static = "1.5.0"
miette = "7.6.0"
pyo3 = { version = "0.25.1" }
# Build with Python >= 3.10 (set PYO3_PYTHON accordingly)
pyo3-stub-gen = "0.13.1"
rayon = "1.11.0"
rmp-serde = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
slog = "2.8.2"
slog-async = "2.8.0"
slog-json = "2.6.1"
slog-term = "2.9.2"
tokio = { version = "1" }
tower-lsp = { version = "0.20.0", default-features = false }
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "std",
  "fmt",
  "smallvec",
  "ansi",
  "tracing-log",
  "json",
] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "6.0.0", default-features = false }

[workspace.lints.clippy]
assertions_on_result_states = "warn"
dbg_macro = "warn"
iter_over_hash_type = "warn"
lossy_float_literal = "warn"
redundant_clone = "warn"
result_large_err = "allow"

[profile.release]
panic = "abort"
debug = true

[profile.bench]
debug = true

[profile.dev]
debug = 0

[profile.dev.package]
insta = { opt-level = 3 }

[profile.test]
debug = "line-tables-only"

#Example: how to point modeling-app at a different repo (e.g. a branch or a local clone)
# [patch.crates-io]
# kcl-ezpz = { path = "../../ezpz/kcl-ezpz" }
# kittycad-modeling-cmds = { git = "https://github.com/KittyCAD/modeling-api.git", branch = "ben/chamfer_angle" }
# kittycad-modeling-session = { git = "https://github.com/KittyCAD/modeling-api.git", branch = "ben/chamfer_angle" }
# #kittycad-modeling-session = { path = "../../modeling-api/modeling-session" }
