[package]
name = "kcl-ezpz"
version = "0.1.0"
edition = "2024"
description = "A constraint solver for KCL and Zoo Design Studio"

[dependencies]
faer = "0.22.6"
indexmap.workspace = true
kittycad-modeling-cmds = { workspace = true }
libm = "0.2.15"
newton_faer = { git = "https://github.com/adamchalmers/newton-faer", branch="achalmers/fallible" }
thiserror = "2.0.16"

[dev-dependencies]
criterion = "0.7.0"

[lints]
workspace = true

[[bench]]
name = "equations"
harness = false
