[package]
name = "kcl-api"
description = "Interface for how to execute KCL"
version = "0.2.164"
edition = "2024"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"
authors = ["Zoo KCL team"]

[dependencies]
schemars = "0.8.22"
serde = { workspace = true }
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }

[lints]
workspace = true
