
[package]
name = "kcl-bumper"
version = "0.1.143"
edition = "2024"
repository = "https://github.com/KittyCAD/modeling-api"
description = "Bumps versions in Cargo.toml"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kcl-bumper"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
semver = "1.0.28"
serde = { workspace = true }
toml_edit = "0.25.8"

[lints]
workspace = true

