[package]
name = "kcl-derive-docs"
description = "A tool for generating documentation from Rust derive macros"
version = "0.1.85"
edition = "2021"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.104", features = ["full"] }

[lints]
workspace = true
