[package]
name = "kcl-error"
version = "0.1.123"
edition = "2024"
description = "KCL error definitions"
license = "MIT"

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "11.1.0", features = [
  "uuid-impl",
  "url-impl",
  "chrono-impl",
  "indexmap-impl",
  "no-serde-warnings",
  "serde-json-impl",
] }

[lints]
workspace = true
