[package]
name = "kcl-error"
version = "0.2.169"
edition = "2024"
description = "KCL error definitions"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"

[dependencies]
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "12.0.1", features = [
  "uuid-impl",
  "url-impl",
  "chrono-impl",
  "indexmap-impl",
  "no-serde-warnings",
  "serde-json-impl",
] }
thiserror = "2.0.18"
pyo3 = { workspace = true, optional = true }
schemars = { workspace = true }

[lints]
workspace = true

[features]
pyo3 = ["dep:pyo3"]
