[package]
name = "kcl-language-server-release"
version = "0.1.56"
edition = "2021"
authors = ["KittyCAD Inc <kcl@kittycad.io>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kcl-language-server-release"
path = "src/main.rs"
bench = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env", "unicode"] }
flate2 = "1.1.0"
lazy_static = { workspace = true }
log = { version = "0.4.27", features = ["serde"] }
slog = { workspace = true }
slog-async = { workspace = true }
slog-json = { workspace = true }
slog-term = { workspace = true }
time = "0.3.41"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
xshell = "0.2.6"
zip = { workspace = true, features = ["default"] }

[lints]
workspace = true
