[package]
name = "kcl-python-bindings"
version = "0.3.85"
edition = "2021"
repository = "https://github.com/kittycad/modeling-app"
exclude = ["tests/*", "files/*", "venv/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kcl"
crate-type = ["cdylib"]
bench = false

[dependencies]
anyhow = { workspace = true }
kcl-lib = { path = "../kcl-lib", features = [
    "pyo3",
    "engine",
    "disable-println",
] }
#kcl-lib = { path = "../modeling-app/src/wasm-lib/kcl", default-features = false, features = ["pyo3", "engine", "disable-println"] }
kittycad-modeling-cmds = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pyo3 = { workspace = true, features = ["serde", "experimental-async"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
