[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "zoo-kcl"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["files*", "tests*", "venv*", "target*"]
