[package]
name = "kcl-test-server"
description = "A test server for KCL"
version = "0.1.127"
edition = "2021"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"

[lib]
bench = false

[dependencies]
anyhow = "1.0.101"
hyper = { version = "0.14.29", features = ["http1", "server", "tcp"] }
kcl-lib = { version = "0.2", path = "../kcl-lib" }
pico-args = "0.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
