[package]
name = "kcl-to-core"
description = "Utility methods to convert kcl to engine core executable tests"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KittyCAD/modeling-app"

[lib]

[[bin]]
name = "kcl-to-core"
path = "src/tool.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.85"
indexmap = { workspace = true }
kcl-lib = { path = "../kcl-lib" }
kittycad = { workspace = true, features = ["clap"] }
kittycad-modeling-cmds = { workspace = true }
tokio = { workspace = true, features = ["full", "time", "rt", "tracing"] }
uuid = { workspace = true }

[lints]
workspace = true
