[package]
name = "kcl-wasm-lib"
description = "KittyCAD Language wasm bindings"
license = "MIT"
version = "0.1.118"
edition = "2021"
repository = "https://github.com/KittyCAD/modeling-app"
publish = false

[lib]
crate-type = ["cdylib"]
bench = false

[features]
dhat-heap = ["kcl-lib/dhat-heap"]

[dependencies]
rayon = { workspace = true }
typed-path = "0.12.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
data-encoding = "2.9.0"
futures = "0.3.31"
# Enable the feature in a transitive dependency.
getrandom_2 = { package = "getrandom", version = "0.2", features = ["js"] }
# Enable wasm_js feature for all transitive dependencies using getrandom 0.3
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-utils = "0.2.0"
js-sys = "0.3.72"
kcl-lib = { path = "../kcl-lib", features = ["artifact-graph"] }
kittycad = { workspace = true }
kittycad-modeling-cmds = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
toml = "0.9.10"
tower-lsp = { workspace = true, features = ["runtime-agnostic"] }
uuid = { workspace = true, features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = { version = "0.4.49", features = ["futures-core-03-stream"] }
wasm-streams = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.76"
features = [
    "console",
    "HtmlTextAreaElement",
    "ReadableStream",
    "WritableStream",
]

[dev-dependencies]
anyhow.workspace = true
pretty_assertions = "1.4.1"
wasm-bindgen-test = "0.3.56"

# Local development only. Placeholder to speed up development cycle
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = false
